--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       input.value = "";
 
       try {
-        const response = await fetch("http://localhost:5000/chat", {
+        const response = await fetch("https://chatbot-3fv6.onrender.com", {  // <-- CHANGE THIS LINE
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ prompt: message })
